bug fix & set thread name
Change-Id: I2aacd0bcb206068572a2464570593c6720e25fa4